syntax = "proto3";

package task;

option go_package = "btaskee/model/task";

enum TaskStatus {
    UNSPECIFIED = 0;
    PENDING = 1;
    CONFIRMED = 2;
}

message Task {
    string uuid = 1; // @gotags: bson:"uuid"
    string detail = 2; // @gotags: bson:"detail"
    string asker_id = 3; // @gotags: bson:"asker_id"
    repeated string accepted_taskers = 4; // @gotags: bson:"accepted_tasker"
    string confirmed_tasker = 5;// @gotags: bson:"confirmed_tasker"
    TaskStatus status = 6; // @gotags: bson:"status"

    int64 created_at = 7; // @gotags: bson:"created_at"
    int64 updated_at = 8; // @gotags: bson:"updated_at"
    int64 deleted_at = 9; // @gotags: bson:"deleted_at"
}